# tars

./: Anchor.toml
lib/common/: Cargo.toml
programs/tars/: Cargo.toml
programs/tars/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs  wallet_whitelist.rs  whitelist_config.rs
programs/tars/src/processor/: add_config_lines.rs  initialize.rs  mint.rs  mod.rs  update.rs  whitelist_mint.rs  withdraw.rs
programs/tars/src/processor/collection/: remove_collection.rs  set_collection.rs  set_collection_during_mint.rs
programs/tars/src/whitelist_config_instructions/: create_whitelist_config.rs  delete_whitelist_config.rs  update_whitelist_config.rs
programs/tars/src/whitelist_instructions/: create_whitelist_account.rs  delete_whitelist_account.rs
tests/: TarsLaunch.ts
