[package]
name = "tars"
version = "0.2.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
test-bpf = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
arrayref = "0.3.6"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.3.3", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.5", features = [
  "no-entrypoint",
] }
anchor-spl = "0.25.0"
solana-program = "1.10.29"
solana-gateway = "0.2.2"
proc_macros = {path='../../lib/proc_macros'}
common = {path='../../lib/common'}
static_assertions = "1.1.0"


[dev-dependencies]
solana-program-test = "1.10.29"
solana-sdk = "~1.10.29"
anchor-client = "0.25.0"
borsh = "~0.9.2"

