[package]
name = "tars"
version = "0.2.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
test-bpf = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
arrayref = "0.3.6"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.2.10", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = [
  "no-entrypoint",
] }
anchor-spl = "0.24.2"
solana-program = "1.9.18"
solana-gateway = "0.2.0"
proc_macros = {path='../../lib/proc_macros'}
common = {path='../../lib/common'}
static_assertions = "1.1.0"

